# b2c

./: .env.example  Dockerfile  alembic.ini  pyproject.toml
app/: exceptions.py  main.py  schemas.py
app/api/: deps.py  utils.py
app/api/routers/: __init__.py  admin_orders.py  auth.py  b2b_events.py  banners.py  buyers.py  cart.py  catalog.py  collections.py  favorites.py  notifications.py  orders.py  product_events.py  reviews.py
app/core/: config.py  database.py  rabbit_config.py  redis_client.py
app/fs/routers/: __init__.py  orders.py
app/models/: addresses.py  banners.py  buyers.py  collections.py  favorites.py  mixins.py  notifications.py  orders.py  payment_methods.py  refresh_tokens.py  reviews.py  subscriptions.py
app/services/: __init__.py  address_service.py  banner_service.py  buyer_service.py  cart_service.py  collection_service.py  favorites_service.py  notification_service.py  order_service.py  payment_method_service.py  review_service.py  subscription_service.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_order_body_hash.py  0003_add_favorites.py  0004_add_product_subscriptions.py  0005_add_banners.py  0006_add_collections.py  0007_checkout_fields.py
tests/: conftest.py  test_banners.py  test_cancel_order.py  test_cart.py  test_catalog.py  test_category_nav.py  test_checkout.py  test_collections.py  test_favorites.py  test_fulfill_order.py  test_orders.py  test_product_card.py  test_product_events.py  test_search.py  test_similar_products.py  test_subscriptions.py
